feat: complete reservation lifecycle and verified reviews